package IphoneAppJava;

public interface AparelhoTelefonico {
    void ligar(String destino);
    void encerrar();
    void iniciarCorreioVoz();
}
