package IphoneAppJava;

public class BrowserTab {
    private WebPage pagina;

    public BrowserTab(WebPage pagina) { this.pagina = pagina; }
    public WebPage getPagina() { return pagina; }
    public void setPagina(WebPage pagina) { this.pagina = pagina; }
}
