package IphoneAppJava;

public interface Navegador {
    void exibirPagina(String url);
    void adicionarNovaAba(String url);
    void atualizarPagina();
}
