package IphoneAppJava;

public interface ReprodutorMusical {
    void tocar(MusicTrack track);
    void pausar();
    void parar();
    void adicionarNaPlaylist(MusicTrack track);
}
