@startuml iphone_sequence
title Diagrama UML - iPhone (Papéis: ReprodutorMusical, AparelhoTelefonico, Navegador)
interface ReprodutorMusical {
+tocar(MusicTrack)
+pausar()
+parar()
+adicionarNaPlaylist(MusicTrack)
}
interface AparelhoTelefonico {
+ligar(destino: String)
+encerrar()
+iniciarCorreioVoz()
}
interface Navegador {
+exibirPagina(url: String)
+adicionarNovaAba(url: String)
+atualizarPagina()
}
class iPhone {
-listaMusicas: List<MusicTrack>
-playlist: Playlist
-tabs: List<BrowserTab>
-currentTab: BrowserTab
-callActive: Call
-voicemail: VoiceMail
+tocar(MusicTrack)
+pausar()
+parar()
+adicionarNaPlaylist(MusicTrack)
+ligar(destino: String)
+encerrar()
+iniciarCorreioVoz()
+exibirPagina(url: String)
+adicionarNovaAba(url: String)
+atualizarPagina()
}
ReprodutorMusical <|.. iPhone
AparelhoTelefonico <|.. iPhone
Navegador <|.. iPhone
class MusicTrack
class Playlist
class BrowserTab
class WebPage
class Call
class VoiceMail
@enduml